<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_ip_adress" />
        
          <TextView
              android:id="@+id/local_ip_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
              android:hint="@string/local_IpAdress_display" />        
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/local_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LocalPort" />

        <EditText
            android:id="@+id/local_port_config"
            android:layout_width="69dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/local_port_config_hint"
            android:inputType="number" />

        <Button
            android:id="@+id/btnListen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="1dp"
            android:layout_marginTop="10dp"
            android:text="@string/listen"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>