<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="260dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- 表格布局 -->

    <TableLayout
        android:id="@+id/TableLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <!-- 表格第一行，串口选择 -->

        <TableRow
            android:id="@+id/TableRow01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/uart" >
            </TextView>

            <Spinner
                android:id="@+id/serial_dev_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

        <!-- 表格第二行，波特率设置 -->

        <TableRow
            android:id="@+id/TableRow02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Baud_rate" >
            </TextView>

            <Spinner
                android:id="@+id/serial_dev_bd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

        <!-- 表格第三行，数据位设置 -->

        <TableRow
            android:id="@+id/TableRow03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/data_bit" >
            </TextView>

            <Spinner
                android:id="@+id/serial_data_bit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

        <!-- 表格第四行，校验位设置 -->

        <TableRow
            android:id="@+id/TableRow04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView04"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/check_bit" >
            </TextView>

            <Spinner
                android:id="@+id/serial_check_bit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

        <!-- 表格第五行，停止位设置 -->

        <TableRow
            android:id="@+id/TableRow05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/TextView05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/stop_bit" >
            </TextView>

            <Spinner
                android:id="@+id/serial_stop_bit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </Spinner>
        </TableRow>

        <!-- 表格第六行，打开/关闭串口按钮 -->

        <TableRow
            android:id="@+id/TableRow06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/buttonUartConfgOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_uart"
                android:textSize="15sp" />
            <!-- 清除显示按钮 -->

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_screen"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    <!-- 十六进制显示/发送 勾选项 -->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBoxHexRecv"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/Hex_display" />

        <CheckBox
            android:id="@+id/checkBoxHexSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Hex_send" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBoxSendToNet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/send_to_net" />

        <CheckBox
            android:id="@+id/checkBoxSendToLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_to_local" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/checkBoxLineFeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/line_feed" />

        <CheckBox
            android:id="@+id/checkBoxTimmingSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timming_send" />

        <EditText
            android:id="@+id/editText_timming"
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:hint="100" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ms" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSend"
        android:layout_width="170dp"
        android:layout_height="wrap_content"        
        android:text="@string/send_uart"
        android:textSize="15sp" />

</LinearLayout>