<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/wm_desk">

    <TextView
        android:id="@+id/textView_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/textView_select" />

    <Button
        android:id="@+id/btn_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_select"
        android:layout_toLeftOf="@id/textView_select"
        android:text="@string/btn_client_select" />

    <Button
        android:id="@+id/btn_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView_select"
        android:layout_toRightOf="@id/textView_select"
        android:text="@string/btn_server_select" />

</RelativeLayout>